<resources>
    <string name="teaplace_xi">Fujian, Xiamen</string>
    <string name="teaplace_hao">Fujian, Xiamen</string>
    <string name="teaplace_nan">Fujian, Xiamen</string>
    <string name="teaplace_bu">Fujian, Xiamen</string>
    <string name="language">en-us</string>
    <string name="add_friend_noaddmyself">Cannot add self as friend</string>
    <string name="other_cup_hasfriend">The one already has friend</string>
    <string name="app_name">warme</string>
    <string name="add_friend">add friend</string>
    <string name="start_connect">start</string>
    <string name="retry_connect">restart</string>
    <string name="retry_tips">Can\'t connect? Please try to close your phone to warme</string>
    <string name="apk_update"> software upgrade</string>
    <string name="apk_new">Currently is the latest version</string>
    <string name="qr_tips">Scan his/her QR code via warme app, enjoying the new experience of Instant Messaging provided by warme </string>
    <string name="auto_connect">Auto</string>
    <string name="manually_connect">manual</string>
    <string name="title_datagraph">chat</string>
    <string name="watertem_led">Notification Light</string>
    <string name="title_tea">tastea</string>
    <string name="tw">flavor</string>
    <string name="title_ochat">Love</string>
    <string name="title_anim">Animation</string>
    <string name="scrawlanim">Animation</string>
    <string name="list">List</string>
    <string name="chat">Chat</string>
    <string name="del">Delete</string>
    <string name="del_cup_notify">confirm deleting friend?</string>
    <string name="del_cup_ok">succeed deleting friend</string>
    <string name="del_cup_no">failed deleting friend</string>
    <string name="send">Send</string>
    <string name="btn_send">Send</string>
    <string name="btn_pen">Brush</string>
    <string name="btn_eraser">Eraser</string>
    <string name="btn_reset">Redraw</string>
    <string name="send_failed">Message failed: not logged on</string>
    <string name="reSend">Resend</string>
    <string name="unlogin">Not logged into server</string>
    <string name="login_in_other">You are logged in somewhere else</string>
    <string name="title_scrawl">Doodle</string>
    <string name="btn_canvas">DoodleDoodle</string>
    <string name="btn_shake">Shake</string>
    <string name="progress">Water Information</string>
    <string name="percent">%</string>
    <string name="goals">Goal:</string>
    <string name="ml">ml</string>
    <string name="have_friends"> You cannot add, you are already friends.</string>
    <string name="add_friends_err">Add friend failed</string>
    <string name="my_feeling">daily mood:</string>
    <string name="edit_feeling_tip">Your mood will be displayed on warme.Currently only available in English.</string>
    <string name="title_tips">teap</string>
    <string name="tab_alltips">News</string>
    <string name="tab_marktips">Favorite News</string>
    <string name="loading">loading&#8230;</string>
    <string name="load_more">Pull up for more</string>
    <string name="click_torefresh">Click to refresh</string>
    <string name="release">Release to refresh</string>
    <string name="getTips_failed">Failed to receive message</string>
    <string name="lastest_load_time">Last Updated:</string>
    <string name="mark_success">Bookmarked</string>
    <string name="marked">Favorites</string>
    <string name="bluetooth_closed">Phone\'s Bluetooth is not turned on</string>
    <string name="title_bluetooth">Bluetooth connectivity</string>
    <string name="connecting">Connect my warme&#8230;</string>
    <string name="connect_tips">Fingers touch to confirm</string>
    <string name="connect_tips_desc">First binding, finger lightly touching gesture sensing window open intelligent life</string>
    <string name="searching">Finding warme&#8230;</string>
    <string name="stop">Stop</string>
    <string name="stop_search_bluedevice">Stop</string>
    <string name="no_found_bluedevice">Couldn\'t find warme</string>
    <string name="connect">Connected</string>
    <string name="disconnect">Disconnected</string>
    <string name="connect_succeed">Already connected to selected warme</string>
    <string name="connect_failed">Not connected to warme</string>
    <string name="requesting">Please waiting&#8230;</string>
    <string name="title_ome">Data</string>
    <string name="total_drink">Water Drank</string>
    <string name="goal_drink">Water Target</string>
    <string name="cur_watertemperature">Current water temperature</string>
    <string name="water">Water Information</string>
    <string name="toal_drink_graph">Current amount of water</string>
    <string name="per_drink">Curent daily water consumption</string>
    <string name="time">Time</string>
    <string name="percent_graph">PCT</string>
    <string name="monday">Mon.</string>
    <string name="tuesday">Tues.</string>
    <string name="Wednesday">Wed.</string>
    <string name="Thursday">Thur.</string>
    <string name="Friday">Fri.</string>
    <string name="Saturday">Sat.</string>
    <string name="Sunday">Sun.</string>
    <string name="current_year">Year</string>
    <string name="current_month">Month</string>
    <string name="current_day">Day</string>
    <string name="share_content">Today\'s information on water drank</string>
    <string name="title_setting">Setting</string>
    <string name="nickname">Nickname</string>
    <string name="modify_success">Edit successful</string>
    <string name="modify_failed">Edit failure</string>
    <string name="modify_headimg">Edit photos</string>
    <string name="two_dimension_code">My code</string>
    <string name="remind2drink">Drink reminder</string>
    <string name="drink_method">Set reminder</string>
    <string name="day_goal_drink">Water consumption goal</string>
    <string name="handwarm">Hand Warmer</string>
    <string name="heater">Keep Warm</string>
    <string name="setocup">warme settings</string>
    <string name="about">About warme</string>
    <string name="vibrate_remind">Vibration Reminder</string>
    <string name="default_watertem_led_tips">Default colors are Blue for below 40°, Yellow for 40°-60°, Above 60° is set at Red</string>
    <string name="custom_watertem_led">Custom</string>
    <string name="below40">Below 40°</string>
    <string name="middletem">Between 40°-60°</string>
    <string name="above60">Above 60°</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="cyan">Blue-green</string>
    <string name="purple">Purple</string>
    <string name="white">White</string>
    <string name="auto_study_project">Automatic Reminder</string>
    <string name="manually">Manually Add</string>
    <string name="set_failed">Settings Failure</string>
    <string name="recover">Restore to factory settings</string>
    <string name="recover_tips">Confirm restoration to factory settings</string>
    <string name="Firmware_update">Upgrade my warme</string>
    <string name="shutdown">standby</string>
    <string name="shutdown_tips">standby warme can be activated by placing at the charing mat</string>
    <string name="exit">Replace warme</string>
    <string name="exit_tips">Disconnect from warme</string>
    <string name="about_company">Homepage</string>
    <string name="about_weixin">Wechat group number</string>
    <string name="about_vision">Version</string>
    <string name="about_copyright">All rights reserved</string>
    <string name="about_copyrighter">Shenzhen rrioo Technology Co., Ltd</string>
    <string name="camera">Picutre</string>
    <string name="from_photo">Choose an album</string>
    <string name="edit">Edit</string>
    <string name="content_length">/twenty words</string>
    <string name="save">save</string>
    <string name="rename_null">Must input name</string>
    <string name="image_too_large">Image cannot exceed 32k</string>
    <string name="remind">Tip</string>
    <string name="dia_tip">Tip</string>
    <string name="del_tips">Confirm deletion.</string>
    <string name="tea_done">Your tea is ready</string>
    <string name="start_tea">Beginning brew</string>
    <string name="stop_tea">Finished brewing</string>
    <string name="teaing">Remove tea from warme</string>
    <string name="teaing_minutes">Minute</string>
    <string name="teaing_seconds">Seconds</string>
    <string name="wateryiled">Water:</string>
    <string name="tempratureunit">°C</string>
    <string name="teaing_failed">Suitable temperature for brewing tea required above 60 °</string>
    <string name="tea_taste">Flavor:&#160;</string>
    <string name="tea_place">Source location:&#160;</string>
    <string name="tea_age">Age:&#160;</string>
    <string name="teanickname_yi">Té Rosé</string>
    <string name="teanickname_xi">Pure Pu’er Tea</string>
    <string name="teanickname_hao">Buddha’s Oolong</string>
    <string name="teanickname_nan">Reserve Black Tea</string>
    <string name="teanickname_bu">Rosé Infused Green Tea</string>
    <string name="teaname_yi">Red rose buds</string>
    <string name="teaname_xi">Pu\'er Tea</string>
    <string name="teaname_hao">Tie guan yin</string>
    <string name="teaname_nan">Black Tea Leaves</string>
    <string name="teaname_bu">Rose infued green tea</string>
    <string name="teaplace_yi">Fujian, Xiamen</string>
    <string name="taste_yi">Lingering aroma, refreshing taste.</string>
    <string name="taste_xi">Dark crimson, pure mildly sweet flavor</string>
    <string name="taste_hao">Long lasting, full flavor</string>
    <string name="taste_nan">Smooth with a hint of honey</string>
    <string name="taste_bu">Yellowish-green, lasting deliciously sweet flavor</string>
    <string name="nfc_notification_title">You are now brewing,</string>
    <string name="nfc_notification_produce_time">Date of Production:</string>
    <string name="click_update">Click to update</string>
    <string name="update_finish">Update complete</string>
    <string name="send_command_ok">Ready to update</string>
    <string name="send_command_no">Request failed, please resend</string>
    <string name="update_fail">Update failed</string>
    <string name="message">Update stopped</string>
    <string name="ok">Confirm</string>
    <string name="Confirmation">Confirm</string>
    <string name="update_or_not">Confirm update</string>
    <string name="remind2drink_sw">Drinking remind switch</string>
    <string name="update_is_Runing">upgrading</string>
    <string name="can_not_find_version_name">can\'t find the version</string>
    <string name="disconnect_chat_service">Not connected to server</string>
    <string name="check_network">Please check your network connection</string>
    <string name="search_bluedevice">finding warme</string>
    <string name="about_company_website">www.rrioo.com</string>
    <string name="about_weixin_name">rrioo</string>
    <string name="get_cupremind_failed">Failed to obtain the remind time of drinking</string>
    <string name="syncuping">Syncing cup parameters&#8230;</string>
    <string name="seek_text_light">light</string>
    <string name="seek_text_strong">strong</string>
    <string name="seek_text_tw">flavor </string>
    <string name="apk_update_cancel">Talk to you later</string>
    <string name="apk_update_ok">Update now</string>
    <string name="never_remind">No longer remind</string>
    <string name="later_remind">Remind me later</string>
    <string name="updatecup">warme update</string>
    <string name="dialog_contacts">In order to find more friends, it is recommended that you allow us to access your phone address book</string>
    <string name="dialog_delete">Confirm remove buddy</string>
    <string name="dialog_ok">confirm</string>
    <string name="dialog_cancel">cancel</string>
    <string name="dialog_contacts_ok">allow</string>
    <string name="dialog_contacts_no">not allow</string>
</resources>