<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="10dp" >
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/dia_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/dia_tip"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_dia_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="10dp"
            android:text="@string/reSend"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >
        
           <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:minWidth="90dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/selector_dialog_mood"
            android:gravity="center"
            android:text="@string/apk_update_cancel"
            android:textColor="#fff" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:minWidth="90dp"
            android:background="@drawable/selector_dialog_mood2"
            android:gravity="center"
            android:text="@string/apk_update_ok"
            android:textColor="#fff" />
    </LinearLayout>

</LinearLayout>