<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4f4f4"
    android:orientation="vertical" 
    android:id="@+id/layout_main">

    <FrameLayout
        android:id="@+id/durian_head_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color" >
    <RelativeLayout
        android:id="@+id/title_layout_about_page"
        android:layout_width="fill_parent"
        android:layout_height="60dp">

        <LinearLayout
            android:id="@+id/layout_back"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:padding="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/back_sel" />

        </LinearLayout>

        <com.sen5.ocup.gui.MarqueeTextView
            android:id="@+id/tv_title"
            android:layout_width="200dp"
            android:layout_height="fill_parent"
            android:ellipsize="marquee"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
           	android:text="@string/about"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF" />
    </RelativeLayout>
    </FrameLayout>

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/home_page"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#fff"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:padding="8dp"
            android:text="@string/about_company"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/addr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:padding="8dp"
            android:text="@string/about_company_website"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#e2e2e2"
        android:visibility="visible" />

    <RelativeLayout
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:padding="8dp"
            android:text="@string/about_weixin"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:padding="8dp"
            android:text="@string/about_weixin_name"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="14dp"
        android:id="@+id/version"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:textColor="@color/gray_text_color"
            android:padding="8dp"
            android:text="@string/about_vision"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:textColor="@color/gray_text_color"
            android:id="@+id/version_code_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:padding="8dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/whitetextcolor"
        >
    <TextView
        android:layout_width="fill_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="0.1dp"
        android:background="#e2e2e2"
        android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/copyright"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="left"
            android:padding="8dp"
            android:textColor="@color/gray_text_color"
            android:text="@string/about_copyright"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="right"
            android:padding="8dp"
            android:textColor="@color/gray_text_color"
            android:singleLine="false"
            android:text="@string/about_copyrighter"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

</LinearLayout>