<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_dia_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/updatecup"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_dia_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/smalltextcolor" />

    <Button
        android:id="@+id/btn_update"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:background="#fff"
        android:gravity="center"
        android:text="@string/click_update"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:textColor="@color/bluetextcolor"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/smalltextcolor" />

    <Button
        android:id="@+id/btn_remind"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:gravity="center"
        android:text="@string/later_remind"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/bluetextcolor" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/smalltextcolor" />

    <Button
        android:id="@+id/btn_neverremind"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:gravity="center"
        android:text="@string/never_remind"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:textColor="@color/bluetextcolor"/>

</LinearLayout>